--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.bebe.zookeeper</groupId>
     <artifactId>ha-coordinator</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-SSNAPSHOT</version>
 
     <packaging>jar</packaging>
 
@@ -15,6 +15,7 @@
         <jdk.version>1.7</jdk.version>
         <zookeeper.version>3.4.5</zookeeper.version>
         <slf4j-version>1.7.5</slf4j-version>
+        <gson-version></gson-version>
     </properties>
 
     <dependencies>
@@ -45,6 +46,13 @@
                     <groupId>org.slf4j</groupId>
                 </exclusion>
             </exclusions>
+        </dependency>
+
+        <!-- Gson-->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.6.2</version>
         </dependency>
 
         <!-- Logging -->
@@ -80,6 +88,14 @@
         </dependency>
     </dependencies>
 
+    <repositories>
+        <repository>
+            <id>default</id>
+            <url>http://repo.maven.apache.org/maven2/</url>
+        </repository>
+    </repositories>
+
+
     <build>
         <plugins>
             <plugin>
@@ -102,7 +118,7 @@
                         <index>true</index>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>com.mitake.o.Main</mainClass>
+                            <mainClass>com.bebe.zookeeper.Main</mainClass>
                             <classpathPrefix>libs/</classpathPrefix>
                         </manifest>
                     </archive>
