--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,22 @@
         <jdk.version>1.7</jdk.version>
         <zookeeper.version>3.4.5</zookeeper.version>
         <slf4j-version>1.7.5</slf4j-version>
-        <gson-version></gson-version>
+        <curator-version>4.0.0</curator-version>
+        <gson-version>2.6.2</gson-version>
     </properties>
 
     <dependencies>
+        <!-- curator -->
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-framework</artifactId>
+            <version>${curator-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
+            <version>${curator-version}</version>
+        </dependency>
         <!-- zookeeper -->
         <dependency>
             <groupId>org.apache.zookeeper</groupId>
@@ -113,12 +125,12 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
-                    <finalName>o-zk</finalName>
+                    <finalName>start</finalName>
                     <archive>
                         <index>true</index>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>com.bebe.zookeeper.Main</mainClass>
+                            <mainClass>com.bebe.curator.Main</mainClass>
                             <classpathPrefix>libs/</classpathPrefix>
                         </manifest>
                     </archive>
