--- a/src/main/resources/default.properties
+++ b/src/main/resources/default.properties
@@ -1,4 +1,20 @@
+#Zookeeper's Host.
 zkHost=localhost:2181
+
+#Zookeeper's sessiontimeout.
+#timeout=15000
+
+#Your HA Cluster's name.
 cluster.name=ha-test
+
+#The script or command you want to run.
 process.command=top
+
+#Your application node's name.
 agent.name=node01
+
+#The maximun retries for register agent or process.
+#agent.retries=3
+
+#The maximun processors you want to run in your cluster.he maximun processors you want to run in your cluster.
+#processors.maximum=1
