fix process started frequently, and kill children process started by process.command

--- a/src/main/resources/default.properties
+++ b/src/main/resources/default.properties
@@ -8,7 +8,10 @@ zkHost=localhost:2181
 cluster.name=ha-test
 
 #The script or command you want to run.
-process.command=top
+process.command=./date.sh >> log/nohup.log 2>&1
+
+#Thes script used to kill children process caused by process.command
+#process.kill=./kill.sh
 
 #Your application node's name.
 agent.name=node01
@@ -17,4 +20,4 @@ agent.name=node01
 #agent.retries=3
 
 #The maximun processors you want to run in your cluster.he maximun processors you want to run in your cluster.
-#processors.maximum=1
+processors.maximum=3
