--- a/pom.xml
+++ b/pom.xml
@@ -201,7 +201,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
-                    <finalName>start</finalName>
+                    <finalName>ha-coordinator</finalName>
                     <archive>
                         <index>true</index>
                         <manifest>
