--- a/src/main/resources/default.properties
+++ b/src/main/resources/default.properties
@@ -8,7 +8,8 @@ zkHost=localhost:2181
 cluster.name=ha-test
 
 #The script or command you want to run.
-process.command=./date.sh >> log/nohup.log 2>&1
+#process.command=./date.sh >> log/nohup.log 2>&1
+process.command=top
 
 #Thes script used to kill children process caused by process.command
 #process.kill=./kill.sh
